
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_family; int sin_port; int sin_addr; } ;
struct sockaddr {int dummy; } ;
struct in_addr {int dummy; } ;
typedef int serv ;


 int AF_INET ;
 int IPPROTO_TCP ;
 int SOCK_STREAM ;
 int bzero (struct sockaddr_in*,int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int htons (unsigned short) ;
 int memcpy (int *,struct in_addr*,int) ;
 int socket (int ,int ,int ) ;

int tcp_connect(struct in_addr host,unsigned short port)
{
        struct sockaddr_in serv;
        int fd;

        fd = socket(AF_INET,SOCK_STREAM,IPPROTO_TCP);
        bzero(&serv,sizeof(serv));
        memcpy(&serv.sin_addr,&host,sizeof(struct in_addr));
        serv.sin_port = htons(port);
        serv.sin_family = AF_INET;
        if (connect(fd,(struct sockaddr *)&serv,sizeof(serv)) < 0) {
                return(-1);
        }
        return(fd);
}
